--- a/src/components/app.css
+++ b/src/components/app.css
@@ -3,6 +3,17 @@
   margin: auto;
 }
 
+table {
+  border-collapse: collapse;
+}
+
+td,
+th {
+  border: 1px solid #999;
+  padding: 0.5rem;
+  text-align: left;
+}
+
 @media print {
   .no-print {
     display: none;
